@@ -41,7 +41,7 @@
  */
 
 #include "api/ofa-idate-filter.h"
-#include "api/ofa-main-window-def.h"
+#include "api/ofa-igetter-def.h"
 
 G_BEGIN_DECLS
 
@@ -66,7 +66,7 @@ typedef struct {
 
 GType                ofa_ledger_summary_bin_get_type       ( void ) G_GNUC_CONST;
 
-ofaLedgerSummaryBin *ofa_ledger_summary_bin_new            ( const ofaMainWindow *main_window );
+ofaLedgerSummaryBin *ofa_ledger_summary_bin_new            ( ofaIGetter *getter );
 
 gboolean             ofa_ledger_summary_bin_is_valid       ( ofaLedgerSummaryBin *bin,
 																	gchar **msgerr );
