@@ -42,11 +42,12 @@
    - myIWindow: remove all references to main window.
    - ofaApplication: implements new ofaIGetter interface.
    - ofaExtension: now passes the ofaIGetter (instead of the GApplication).
-   - ofaMainWindow: implements new ofaIGetter and ofaIThemeManager interfaces.
-   - ofa_nomodal_page_present_by_type(): new method.
    - ofaIGetter: new interface.
    - ofaIThemeManager: new interface.
+   - ofaMainWindow: implements new ofaIGetter and ofaIThemeManager interfaces.
+   - ofa_nomodal_page_present_by_type(): new method.
    - ofaPage: implements new ofaIGetter interface.
+   - ofa_page_get_main_window(): removed method.
 
 -----------------------------------------------------------------------
  Version 0.52
